Fix: remove extra white space on top of nav

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,5 +1,8 @@
 /* Home page */
 @media (max-width: 800px) {
+  nav img {
+    width: 80px;
+  }
   .section-testimonial {
     padding: 50px 0;
   }
